fix: Customers, Status, Complaints, Complaints Options , products and customer products CRUD's added

--- a/ComplaintsManagement.UI/Content/Site.css
+++ b/ComplaintsManagement.UI/Content/Site.css
@@ -22,3 +22,11 @@ select,
 textarea {
     max-width: 280px;
 }
+
+/*Custom styles*/
+span.alert{
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+    width: 100%;
+    font-weight: bold;
+}
