--- a/ComplaintsManagement.UI/Views/Customers/Create.cshtml
+++ b/ComplaintsManagement.UI/Views/Customers/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model  ComplaintsManagement.UI.Models.TaskResult<ComplaintsManagement.Infrastructure.DTOs.CostumersDto>
+﻿@model  ComplaintsManagement.UI.Models.TaskResult<ComplaintsManagement.Infrastructure.DTOs.CustomersDto>
 
 @{
     ViewBag.Title = "Create";
