--- a/ComplaintsManagement.UI/Views/Shared/_LoginPartial.cshtml
+++ b/ComplaintsManagement.UI/Views/Shared/_LoginPartial.cshtml
@@ -13,7 +13,14 @@
             @Html.ActionLink("Productos", "Index", "Products", routeValues: null, htmlAttributes: new { title = "Productos" })
         </li>
         <li>
-            @Html.ActionLink("Quejas", "Index", "Complaints", routeValues: null, htmlAttributes: new { title = "Quejas" })
+            @Html.ActionLink("Opciones de Reclamo", "Index", "ComplaintsOptions", routeValues: null, htmlAttributes: new { title = "Opciones de Reclamos" })
+        </li>
+        <li>
+            @Html.ActionLink("Status", "Index", "Status", routeValues: null, htmlAttributes: new { title = "Status" })
+        </li>        
+
+        <li>
+            @Html.ActionLink("Reclamos y Quejas", "Index", "Complaints", routeValues: null, htmlAttributes: new { title = "Reclamos y Quejas" })
         </li>
     </ul>
 
