--- a/ComplaintsManagement.UI/Views/Shared/_Sidebar.cshtml
+++ b/ComplaintsManagement.UI/Views/Shared/_Sidebar.cshtml
@@ -1,39 +1,28 @@
 ﻿
 @if (Request.IsAuthenticated)
 {
-    <div class="col-4" style="height: 90vh;">
-        <div class="wrapper">
-            <!-- Sidebar -->
-            <nav id="sidebar">
-                <ul class="list-unstyled components">
-                    <p>Dummy Heading</p>
-                    <li class="active">
-                        <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Mantenimiento</a>
-                        <ul class="collapse list-unstyled" id="homeSubmenu">
-                            <li>
-                                @Html.ActionLink("Clientes", "Index", "Customers", routeValues: null, htmlAttributes: new { title = "Clientes", @Class = "btn btn-primary" })
-                            </li>
-                            <li>
-                                @Html.ActionLink("Status", "Index", "Status", routeValues: null, htmlAttributes: new { title = "Status", @Class = "btn btn-primary" })
-                            </li>
-                            <li>
-                                @Html.ActionLink("Opciones de Reclamo", "Index", "ComplaintsOptions", routeValues: null, htmlAttributes: new { title = "Opciones de Reclamos", @Class = "btn btn-primary" })
-                            </li>
-                            <li>
-                                @Html.ActionLink("Productos", "Index", "Products", routeValues: null, htmlAttributes: new { title = "Productos", @Class = "btn btn-primary" })
-                            </li>
-                            <li>
-                                @Html.ActionLink("Reclamos y Quejas", "Index", "Complaints", routeValues: null, htmlAttributes: new { title = "Reclamos", @Class = "btn btn-primary" })
-
-                            </li>
-                            <li>
-                                @Html.ActionLink("Reclamos y Quejas", "Index", "Complaints", routeValues: null, htmlAttributes: new { title = "Quejas", @Class = "btn btn-primary" })
-                            </li>
-                        </ul>
-                    </li>
-
-                </ul>
-            </nav>
-        </div>
-    </div>
+    <nav id="sidebar" class="min-height" >         
+        <h3 class="text-white ml-3">Menu</h3>
+        <div class="separator"></div>
+        <ul class="sidebar">
+            <li>
+                <a href="/customers"><i class="fas fa-users"></i> Clientes</a>  @*@Html.ActionLink("Clientes", "Index", "Customers", routeValues: null, htmlAttributes: new { title = "Clientes" })*@
+            </li>
+            <li>              
+                <a href="/status"><i class="fas fa-thermometer-quarter"></i>   Status</a>
+            </li>
+            <li>
+                <a href="/complaintsoptions"><i class="fas fa-filter"></i> Opciones de Reclamos</a>      
+            </li>
+            <li>
+                <a href="/products"><i class="fas fa-clipboard"></i> Productos</a>          
+            </li>
+            <li>
+                <a href="/complaints"><i class="fas fa-list-alt"></i> Reclamos</a>
+            </li>
+            <li>
+                <a href="/departments"><i class="far fa-building"></i> Departamentos</a>
+            </li>
+        </ul>       
+    </nav>
 }
