_CreateOrUpdate partial view added to status crud and div card type added

--- a/ComplaintsManagement.UI/Content/Site.css
+++ b/ComplaintsManagement.UI/Content/Site.css
@@ -83,3 +83,11 @@ span.alert{
     font-size: 15px;
     font-weight: bold;
 }
+
+.card {
+    height: 100%;
+}
+
+.vh-86 {
+    min-height: 86vh;
+}
