--- a/ComplaintsManagement.UI/Views/Customers/Index.cshtml
+++ b/ComplaintsManagement.UI/Views/Customers/Index.cshtml
@@ -3,68 +3,70 @@
     ViewBag.Title = "Index";
 }
 
-<div class="container">
-    <h2>Mantenimiento de Clientes</h2>
-    <h4>Listado de Clientes</h4>
-    <hr />
-    @if (!Model.Success)
-    {
-        <span class="alert alert-danger">@Model.Message</span>
-    }
+<div class="card">
+    <div class="card-header bg-primary mb-2" > <h2 class="text-white">Mantenimiento de Clientes</h2></div>
+    <div class="container">
+        <h4>Listado de Clientes</h4>
+        <hr />
+        @if (!Model.Success)
+        {
+            <span class="alert alert-danger">@Model.Message</span>
+        }
 
-    @if (Model.Success && Model.Message?.Length > 0)
-    {
-        <span class="alert alert-success">@Model.Message</span>
-    }
-    <div class="row">
+        @if (Model.Success && Model.Message?.Length > 0)
+        {
+            <span class="alert alert-success">@Model.Message</span>
+        }
+        <div class="row">
 
-        <div class="col-lg-12">
-            <button class="btn btn-default">@Html.ActionLink("Agregar", "Create")</button>
+            <div class="col-lg-12">
+                <button class="btn btn-default">@Html.ActionLink("Agregar", "Create")</button>
+            </div>
         </div>
-    </div>
-    <hr />
-    <div class="row" style="margin-top: 2rem;">
-        <div class="col-lg-12">
-            <table class="table table-bordered">
-                <thead>
-                    <tr>
-                        <th>Id</th>
-                        <th>Nombre</th>
-                        <th>Apellido</th>
-                        <th>Email</th>
-                        <th>Cédula</th>
-                        <th>Teléfono</th>
-                        <th>Acciones</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    @foreach (var customer in Model.Data)
-                    {
+        <hr />
+        <div class="row" style="margin-top: 2rem;">
+            <div class="col-lg-12">
+                <table class="table table-bordered">
+                    <thead>
                         <tr>
-                            <td>@customer.Id</td>
-                            <td>@customer.Name</td>
-                            <td>@customer.LastName</td>
-                            <td>@customer.Email</td>
-                            <td>@customer.DocumentNumber</td>
-                            <td>@customer.PhoneNumber</td>
-                            <td>
-                                @using (Html.BeginForm(actionName: "Delete", controllerName: "Customers", method: FormMethod.Post))
-                                {
-                                    int Id = customer.Id;
-
-                                    @Html.HiddenFor(model => Id)
-                                    <button onclick="return confirm('¿Estás seguro de eliminar este registro?')" class="btn btn-danger">Eliminar</button>
-                                    @Html.ActionLink("Editar", "Edit", new { Id = customer.Id }, htmlAttributes: new { @Class = "btn btn-warning mr-2" })
-                                    @Html.ActionLink("Ver Productos", "CustomerProducts", new { Id = customer.Id }, htmlAttributes: new { @Class = "btn btn-secondary" })
-                                }
-
-
-                            </td>
+                            <th>Id</th>
+                            <th>Nombre</th>
+                            <th>Apellido</th>
+                            <th>Email</th>
+                            <th>Cédula</th>
+                            <th>Teléfono</th>
+                            <th>Acciones</th>
                         </tr>
-                    }
+                    </thead>
+                    <tbody>
+                        @foreach (var customer in Model.Data)
+                        {
+                            <tr>
+                                <td>@customer.Id</td>
+                                <td>@customer.Name</td>
+                                <td>@customer.LastName</td>
+                                <td>@customer.Email</td>
+                                <td>@customer.DocumentNumber</td>
+                                <td>@customer.PhoneNumber</td>
+                                <td>
+                                    @using (Html.BeginForm(actionName: "Delete", controllerName: "Customers", method: FormMethod.Post))
+                                    {
+                                        int Id = customer.Id;
 
-                </tbody>
-            </table>
+                                        @Html.HiddenFor(model => Id)
+                                        <button onclick="return confirm('¿Estás seguro de eliminar este registro?')" class="btn btn-danger">Eliminar</button>
+                                        @Html.ActionLink("Editar", "Edit", new { Id = customer.Id }, htmlAttributes: new { @Class = "btn btn-warning mr-2" })
+                                        @Html.ActionLink("Ver Productos", "CustomerProducts", new { Id = customer.Id }, htmlAttributes: new { @Class = "btn btn-secondary" })
+                                    }
+
+
+                                </td>
+                            </tr>
+                        }
+
+                    </tbody>
+                </table>
+            </div>
         </div>
     </div>
 </div>
