--- a/ComplaintsManagement.UI/Views/Status/Edit.cshtml
+++ b/ComplaintsManagement.UI/Views/Status/Edit.cshtml
@@ -5,52 +5,17 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<div class="container">
-    <h2>Mantenimiento de Status</h2>
-
-
-    <div class="row">
+<div class="card">
+    <div class="card-header bg-primary"><h3 class="text-white">Mantenimiento de Status</h3></div>
+    <div class="row card-body">
         <div class="col-lg-12">
-            @using (Html.BeginForm(controllerName: "Status", actionName: "Edit", method: FormMethod.Post))
-            {
-                @Html.AntiForgeryToken()
-                @Html.HiddenFor(e => e.Data.Id)
-                <div class="form-horizontal">
-                    <h4>Edición de Status</h4>
-                    <hr />
-                    @if (!Model.Success)
-                    {
-                        <span class="alert alert-danger" style="margin-top: 2rem;">@Model.Message</span>
-                        <hr />
-                    }
-
-                    @if (Model.Success && Model.Message?.Length > 0)
-                    {
-                        <span class="alert alert-success" style="margin-top: 2rem;">@Model.Message</span>
-                        <hr />
-                    }
-
-                    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                    <div class="form-group">
-                        @Html.LabelFor(model => model.Data.Name, htmlAttributes: new { @class = "control-label col-md-2" })
-                        <div class="col-md-10">
-                            @Html.EditorFor(model => model.Data.Name, new { htmlAttributes = new { @class = "form-control" } })
-                            @Html.ValidationMessageFor(model => model.Data.Name, "", new { @class = "text-danger" })
-                        </div>
-                    </div>
-
-                    <div class="form-group">
-                        <div class="col-md-offset-2 col-md-10">
-                            <input type="submit" value="Actualizar" class="btn btn-primary" />
-                        </div>
-                    </div>
-                </div>
+            @{
+                Html.RenderPartial("_CreateOrUpdate", Model);
             }
+
         </div>
     </div>
-
-
-    <div>
+    <div class="row m-3">
         <button class="btn btn-default">@Html.ActionLink("Regresar al listado de Status", "Index")</button>
     </div>
 </div>
