--- a/ComplaintsManagement.UI/Views/Customers/Edit.cshtml
+++ b/ComplaintsManagement.UI/Views/Customers/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model  ComplaintsManagement.UI.Models.TaskResult<ComplaintsManagement.Infrastructure.DTOs.CustomersDto>
+﻿@model  ComplaintsManagement.UI.Models.TaskResult<ComplaintsManagement.Infrastructure.DTOs.UsersDto>
 
 @{
     ViewBag.Title = "Edit";
