--- a/ComplaintsManagement.UI/Views/Customers/CustomerProductsCreate.cshtml
+++ b/ComplaintsManagement.UI/Views/Customers/CustomerProductsCreate.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 
     var customer = (ComplaintsManagement.Infrastructure.DTOs.UsersDto)TempData["customer"];
-    var products = (System.Collections.Generic.List<ComplaintsManagement.Infrastructure.DTOs.ProductsDto>)TempData["products"];
+    var products = (System.Collections.Generic.List<ComplaintsManagement.Infrastructure.DTOs.ProductsDto>)ViewBag.Products;
 }
 
 <div class="card">
