--- a/ComplaintsManagement.UI/Views/ComplaintsOptions/Edit.cshtml
+++ b/ComplaintsManagement.UI/Views/ComplaintsOptions/Edit.cshtml
@@ -6,7 +6,7 @@
     var products = (System.Collections.Generic.List<ComplaintsManagement.Infrastructure.DTOs.ProductsDto>)TempData["products"];
 }
 
-<div class="container">
+<div class="card">
     <h2>Mantenimiento de Opciones de Reclamo</h2>
 
 
