--- a/ComplaintsManagement.UI/Views/Products/Edit.cshtml
+++ b/ComplaintsManagement.UI/Views/Products/Edit.cshtml
@@ -5,69 +5,67 @@
 }
 
 
-<div class="container">
-    <h2>Mantenimiento de Productos</h2>
+<div class="card">
+    <div class="bg-primary card-header"><h2 class="text-white">Mantenimiento de Productos</h2></div> 
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    @using (Html.BeginForm(controllerName: "Products", actionName: "Edit", method: FormMethod.Post))
+                    {
+                        @Html.AntiForgeryToken()
+                        @Html.HiddenFor(model => model.Data.Id)
+                        <div class="form-horizontal">
+                            <h4 class="mt-3">Edición de Productos</h4>
+                            <hr />
+                            @if (!Model.Success)
+                            {
+                                <span class="alert alert-danger">@Model.Message</span>
+                                <hr />
+                            }
 
+                            @if (Model.Success && Model.Message?.Length > 0)
+                            {
+                                <span class="alert alert-success">@Model.Message</span>
+                                <hr />
+                            }
 
-    <div class="row">
-        <div class="col-lg-12">
-            @using (Html.BeginForm(controllerName: "Products", actionName: "Edit", method: FormMethod.Post))
-            {
-                @Html.AntiForgeryToken()
-                @Html.HiddenFor(model => model.Data.Id)
-            <div class="form-horizontal">
-                <h4>Edición de Productos</h4>
-                <hr />
-                @if (!Model.Success)
-                {
-                    <span class="alert alert-danger">@Model.Message</span>
-                    <hr />
-                }
+                            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                            <div class="form-group">
+                                @Html.LabelFor(model => model.Data.Name, htmlAttributes: new { @class = "control-label col-md-2" })
+                                <div class="col-md-10">
+                                    @Html.EditorFor(model => model.Data.Name, new { htmlAttributes = new { @class = "form-control" } })
+                                    @Html.ValidationMessageFor(model => model.Data.Name, "", new { @class = "text-danger" })
+                                </div>
+                            </div>
 
-                @if (Model.Success && Model.Message?.Length > 0)
-                {
-                    <span class="alert alert-success">@Model.Message</span>
-                    <hr />
-                }
+                            <div class="form-group">
+                                @Html.LabelFor(model => model.Data.Price, htmlAttributes: new { @class = "control-label col-md-2" })
+                                <div class="col-md-10">
+                                    @Html.EditorFor(model => model.Data.Price, new { htmlAttributes = new { @class = "form-control" } })
+                                    @Html.ValidationMessageFor(model => model.Data.Price, "", new { @class = "text-danger" })
+                                </div>
+                            </div>
 
-                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                <div class="form-group">
-                    @Html.LabelFor(model => model.Data.Name, htmlAttributes: new { @class = "control-label col-md-2" })
-                    <div class="col-md-10">
-                        @Html.EditorFor(model => model.Data.Name, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.Data.Name, "", new { @class = "text-danger" })
-                    </div>
-                </div>
-
-                <div class="form-group">
-                    @Html.LabelFor(model => model.Data.Price, htmlAttributes: new { @class = "control-label col-md-2" })
-                    <div class="col-md-10">
-                        @Html.EditorFor(model => model.Data.Price, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.Data.Price, "", new { @class = "text-danger" })
-                    </div>
-                </div>
-
-                <div class="form-group">
-                    @Html.LabelFor(model => model.Data.Description, htmlAttributes: new { @class = "control-label col-md-2" })
-                    <div class="col-md-10">
-                        @Html.EditorFor(model => model.Data.Description, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.Data.Description, "", new { @class = "text-danger" })
-                    </div>
-                </div>             
-                <div class="form-group">
-                    <div class="col-md-offset-2 col-md-10">
-                        <input type="submit" onclick="return confirm('¿Estás seguro de actualizar este registro?')" value="Actualizar" class="btn btn-primary" />
-                    </div>
+                            <div class="form-group">
+                                @Html.LabelFor(model => model.Data.Description, htmlAttributes: new { @class = "control-label col-md-2" })
+                                <div class="col-md-10">
+                                    @Html.EditorFor(model => model.Data.Description, new { htmlAttributes = new { @class = "form-control" } })
+                                    @Html.ValidationMessageFor(model => model.Data.Description, "", new { @class = "text-danger" })
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <div class="col-md-offset-2 col-md-10">
+                                    <input type="submit" onclick="return confirm('¿Estás seguro de actualizar este registro?')" value="Actualizar" class="btn btn-primary" />
+                                </div>
+                            </div>
+                        </div>
+                    }
                 </div>
             </div>
-            }
+            <div>
+                <button class="btn btn-default">@Html.ActionLink("Regresar al listado de productos", "Index")</button>
+            </div>
         </div>
-    </div>
-
-
-    <div>
-        <button class="btn btn-default">@Html.ActionLink("Regresar al listado de productos", "Index")</button>
-    </div>
 </div>
 
 @section Scripts {
