--- a/ComplaintsManagement.UI/Views/Roles/AddUserRole.cshtml
+++ b/ComplaintsManagement.UI/Views/Roles/AddUserRole.cshtml
@@ -83,10 +83,7 @@
                                         @user.Email
                                     </td>
                                     <td>
-                                        @*@Html.ActionLink("Ver", "UseRoleModal", new { Model.Data.UsersId }, new { @Class = "btn btn-success" })*@
-                                        @*<button type="button" class="btn btn-primary" data-toggle="modal" data-target=".userRoleModal">Ver</button>*@
-                                        <button type="button" id="userRoleModalTriggerBtn" class="btn btn-primary" >Ver</button>
-                                        @*<button type="button" class="btn btn-primary" data-toggle="modal" data-target=".bd-example-modal-lg">Large modal</button>*@
+                                        <button type="button" class="btn btn-primary" data-toggle="modal" data-target=".userRoleModal">Ver</button>
                                     </td>
                                 </tr>
                             }
