--- a/ComplaintsManagement.UI/Views/Shared/_Layout.cshtml
+++ b/ComplaintsManagement.UI/Views/Shared/_Layout.cshtml
@@ -24,15 +24,16 @@
     </header>
     
     <div class="row" style="background-color: #E9ECEF;">
-        <aside class="col-2 w-100 vh-100 bg-sidebar">
-            @Html.Partial("_Sidebar")
-        </aside>
-        @*<div class="col-9 ml-auto mr-auto mt-2 mb-5 pt-3 pb-4 elevation min-height border-radius-10 bg-white"> </div>*@
-        <div class="col-9 ml-auto mr-auto mt-3 vh-86">@RenderBody()</div> 
-        @*<hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
-        </footer>*@
+        @if (User.Identity.IsAuthenticated)
+        {
+            <aside class="col-2 w-100 vh-100 bg-sidebar">
+                @Html.Partial("_Sidebar")
+            </aside>
+        }
+
+
+        <div class="col-9 ml-auto mr-auto mt-3 vh-86">@RenderBody()</div>
+
     </div>
 
     @Scripts.Render("~/bundles/jquery")
